objects/LAT_SellOutCollect__c.object
<CustomObject>
    <description>Header of Sellout collection project</description>
    <fields>
        <fullName>AccountID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SellOut_Collects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CollectDate__c</fullName>
        <description>Date that the data collection was made</description>
        <label>Collect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreationDate__c</fullName>
        <description>Date that the data collection was created</description>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LAT_ReferenceAccount__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LAT_ReferenceAccount__c</referenceTo>
        <relationshipName>LAT_SellOutCollects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferencedMonth__c</fullName>
        <label>Referenced Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Determins the status of the data collection</description>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Filling</fullName>
                    <default>true</default>
                    <label>Filling</label>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <description>Unit of the Data Collection.</description>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                    <default>true</default>
                    <label>CA</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>C9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Collect</label>
    <listViews>
        <fullName>Coletas</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ReferenceAccount__c</columns>
        <columns>ReferencedMonth__c</columns>
        <columns>Status__c</columns>
        <columns>Unit__c</columns>
        <columns>CollectDate__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_SellOutCollect__c.LAT_SellOut</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Coletas Sellout</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Coletas_Sellout_Month</fullName>
        <columns>NAME</columns>
        <columns>ReferenceAccount__c</columns>
        <columns>ReferencedMonth__c</columns>
        <columns>Status__c</columns>
        <columns>Unit__c</columns>
        <columns>CollectDate__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_SellOutCollect__c.LAT_SellOut</value>
        </filters>
        <filters>
            <field>ReferencedMonth__c</field>
            <operation>equals</operation>
            <value>12/1/2017</value>
        </filters>
        <label>Coletas Sellout Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Coletas_Volume</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>AccountID__c</columns>
        <columns>ReferencedMonth__c</columns>
        <columns>Status__c</columns>
        <columns>Unit__c</columns>
        <columns>CollectDate__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_SellOutCollect__c.LAT_Volumen</value>
        </filters>
        <label>Coletas Volume</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Coletas_Volume_IT</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>AccountID__c</columns>
        <columns>ReferencedMonth__c</columns>
        <columns>Status__c</columns>
        <columns>Unit__c</columns>
        <columns>CollectDate__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_SellOutCollect__c.LAT_Volumen</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>5/1/2017 12:00 AM</value>
        </filters>
        <label>Coletas Volume IT</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collects</pluralLabel>
    <recordTypes>
        <fullName>LAT_AR_Sellout</fullName>
        <active>true</active>
        <label>Sellout AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_CollectNF</fullName>
        <active>true</active>
        <label>Nota Fiscal</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_SellOut</fullName>
        <active>true</active>
        <label>SellOut</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Volumen</fullName>
        <active>true</active>
        <label>Volume</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>